--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Ham-Locator version 0.0001
+Ham-Locator version 0.0002
 ===========================
 
 Ham::Locator provides methods for converting between
@@ -22,7 +22,7 @@ This module requires these other modules and libraries:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2010 by Andy Smith <andy.smith@nsnw.co.uk>
+Copyright (C) 2010, 2011 by Andy Smith <andy.smith@nsnw.co.uk>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.10.0 or,
