--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Ham::Locator.
 
+0.0003  Sat Jan 15 19:35:00 2011
+	- Updated documentation
+
 0.0002  Sat Jan 15 19:20:00 2011
 	- latlng2loc implemented
 	- output precision option added (see 'set_precision')
