Import of MEH/Ham-Locator-0.1000 from CPAN.
gitpan-cpan-distribution: Ham-Locator
gitpan-cpan-version:      0.1000
gitpan-cpan-path:         MEH/Ham-Locator-0.1000.tar.gz
gitpan-cpan-author:       MEH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Ham::Locator.
 
+0.1000	Sun Jan 16 15:35:00 2011
+	- Version 0.1000 for beta releas
+
 0.0003  Sat Jan 15 19:35:00 2011
 	- Updated documentation
 
